--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta charest="utf-8">
       
     </head>
-    <body style=" background-color:#d8d8d8;">
+    <body style="background-color: brown">
       <h1 style="text-align:center;">وبسایت شخصی شاهین  پورجواد </h1>
       <p1>درمورد نرمفزار های آزاد </p1>
       <p2>  ولزوم عدم استفاده از اندرکار</p2>
