--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta charest="utf-8">
       
     </head>
-    <body style="background-color: #b0b3c1;">
+    <body style="background-color: gray">
       <h1 style="text-align:center;">وبسایت شخصی شاهین  پورجواد </h1>
       <p1>درمورد نرمفزار های آزاد </p1>
       <p2>  ولزوم عدم استفاده از اندرکار</p2>
