--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       <meta charest="utf-8">
       
     </head>
-    <body style="background-color:#f2f4f7">
+    <body style="background-color:#edeae6">
       <h1 style="text-align:center;">وبسایت شخصی شاهین  پورجواد </h1>
-      <p1>درمورد نرمفزار های آزاد </p1>
-      <p2>  ولزوم عدم استفاده از اندرکار</p2>
+      <p1>درمورد نرمفزار های آزاد <br>
+   ولزوم عدم استفاده از اندرکار</p1>
      
   
     </body>
