--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p1>درمورد نرمفزار های آزاد <br>
    ولزوم عدم استفاده از اندرکار</p1>
       
-      <a href="www.google.com">بهترین سایت جستوجو</a>
+      <a href="http://google.com/">بهترین سایت جستوجو</a>
      
   
     </body>
